[gd_scene load_steps=5 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard.theme" type="Theme" id=1]
[ext_resource path="res://game/data/beepsaber_logo.png" type="Texture" id=2]
[ext_resource path="res://game/BeepSaberMainMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[node name="BeepSaberMainMenu" type="Panel"]
margin_right = 1713.0
margin_bottom = 540.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play_Button" type="Button" parent="."]
margin_left = 491.727
margin_top = 462.354
margin_right = 843.727
margin_bottom = 510.354
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_Button" type="Button" parent="."]
margin_left = 491.727
margin_top = 462.354
margin_right = 651.727
margin_bottom = 510.354
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart_Button" type="Button" parent="."]
margin_left = 667.727
margin_top = 462.354
margin_right = 843.727
margin_bottom = 510.354
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Button" type="Button" parent="."]
margin_left = 859.727
margin_top = 462.354
margin_right = 971.727
margin_bottom = 510.354
rect_pivot_offset = Vector2( -937.032, -176 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop_Button" type="Button" parent="."]
margin_left = 987.727
margin_top = 462.354
margin_right = 1099.73
margin_bottom = 510.354
rect_pivot_offset = Vector2( -937.032, -176 )
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="beepsaber_logo" type="Sprite" parent="."]
position = Vector2( 619.727, 158.354 )
texture = ExtResource( 2 )

[node name="cover" type="Sprite" parent="."]
position = Vector2( 859.727, 158.354 )
scale = Vector2( 0.325, 0.325 )

[node name="SongInfo_Label" type="Label" parent="."]
margin_left = 507.727
margin_top = 270.354
margin_right = 971.727
margin_bottom = 398.354
text = "Song Author: TheFatRat
Song Title: Time Lapse
Beatmap Author: Timeweaver"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playlist" type="ScrollContainer" parent="."]
margin_left = 25.0
margin_top = 96.0
margin_right = 439.0
margin_bottom = 498.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Songs" type="VBoxContainer" parent="Playlist"]

[node name="PlaylistMenu" type="ScrollContainer" parent="."]
margin_left = 1250.0
margin_top = 96.0
margin_right = 1664.0
margin_bottom = 498.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playlists" type="VBoxContainer" parent="PlaylistMenu"]

[node name="DifficultyMenu" type="ScrollContainer" parent="."]
margin_left = 960.0
margin_top = 96.0
margin_right = 1216.0
margin_bottom = 398.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playlists" type="VBoxContainer" parent="DifficultyMenu"]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
download_chunk_size = 65536
timeout = 4
[connection signal="pressed" from="Play_Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="Continue_Button" to="." method="_on_Continue_Button_pressed"]
[connection signal="pressed" from="Restart_Button" to="." method="_on_Restart_Button_pressed"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="Stop_Button" to="." method="_on_Stop_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
